--- a/css/style.css
+++ b/css/style.css
@@ -67,11 +67,12 @@ margin-top: 30px;
 }
 .service-box{
     margin-left: 90px;
-    background: #FFFFFF;
-box-shadow: 10px 40px 50px rgba(229, 233, 246, 0.4);
-border-radius: 20px;
+    
+    box-shadow: 10px 40px 50px rgba(229, 233, 246, 0.4);
+    border-radius: 20px;                        
 width: 341.25px;
 height: 235.58px;
+background: #FFFFFF;
 
 }
 .service-img img{
@@ -197,9 +198,7 @@ margin-bottom: 30px;
     column-gap: 30px;
   
 }
-.article-grid{
-    
-}
+
 .article-margin{
     margin-top: 20px;
 }
@@ -211,6 +210,9 @@ color:#7D7987 ;
 }
 .article{
     margin-top: 150px;
+    background: #FFFFFF;
+    box-shadow: 10px 40px 50px rgba(229, 233, 246, 0.4);
+    border-radius: 20px;
 }
 .article-text h2{
     text-align: center;
@@ -226,6 +228,7 @@ color:#7D7987 ;
     border: transparent;
     background: transparent;
     color: #4089ED;
+    text-align: left;
 }
 .customer-head{
     margin-top: 90px;
@@ -243,11 +246,11 @@ color:#7D7987 ;
 }
 footer{
     background: linear-gradient(208.18deg, #67C3F3 8.89%, #5A98F2 76.58%);
-    border-radius: 24px;
+   
     padding: 60px 80px;
     color: white;
   padding: 50px 90px;
-  margin-bottom: 20px;
+  
 }
 .line-height p{
     line-height: 30px;
